--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,6 @@ jobs:
         run: zig fmt --check .
 
       - name: Run tests
-        run: zig build test
+        run: |
+          zig build test
+          zig build run -- test
